--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,17 @@ header .avatar {
   text-align: center;
   line-height: 1.4em !important; }
 
-/* CSS Styling of the Hobbies Section of the CV */
 footer {
   background: orange; }
+
+.swim, .cycling, .table-tennis {
+  border: solid .19em #333;
+  border-radius: 100%;
+  padding: 12% 12%; }
+  .swim img, .cycling img, .table-tennis img {
+    display: block;
+    width: 100%;
+    height: auto; }
 
 .hobbies {
   width: 80%;
@@ -102,34 +110,21 @@ footer {
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-gap: 5%; }
-
-.swim, .cycling, .table-tennis {
-  border: solid .19em #333;
-  border-radius: 100%;
-  padding: 12% 12%; }
-
-.new-footer {
-  background: rgba(0, 0, 0, 0.5);
-  transition: .5s; }
-
-.new-hobbies {
-  background: #ffee10;
-  transform: scale(1.3) rotateY(540deg);
-  transition: all 2s ease-in;
-  border: solid .21em #333;
-  box-shadow: 0 0 1.5em #ffee10;
-  text-shadow: 0 0 1.5em #ffee10;
-  border-radius: 100%; }
-
-.reverse-hobbies {
-  background: transparent;
-  transform: scale(1) rotateY(0deg);
-  transition: all 2s ease-in; }
-
-.swim img, .cycling img, .table-tennis img {
-  display: block;
-  width: 100%;
-  height: auto; }
+  .hobbies-footer {
+    background: rgba(0, 0, 0, 0.5);
+    transition: .5s ease-in-out; }
+  .hobbies-new {
+    background: #ffee10;
+    transform: scale(1.3) rotateY(540deg);
+    transition: all 2s ease-in;
+    border: solid .21em #333;
+    box-shadow: 0 0 1.5em #ffee10;
+    text-shadow: 0 0 1.5em #ffee10;
+    border-radius: 100%; }
+  .hobbies-reverse {
+    background: transparent;
+    transform: scale(1) rotateY(0deg);
+    transition: all 2s ease-in-out; }
 
 .left-banner {
   position: relative;
@@ -139,7 +134,7 @@ footer {
   font-weight: 500;
   letter-spacing: 1.5px;
   color: #ffdc2a;
-  text-shadow: -1px 0 1px black, 0 1px 1px #000, 1px 0 1px black, 0 -1px 1px #000;
+  text-shadow: -1px 0 1px black, 0 1px 1px #000, 1px 0 1px #000, 0 -1px 1px #000;
   line-height: 1.75;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -161,21 +156,26 @@ footer {
   display: grid;
   grid-template-columns: 1.7fr 2fr; }
 
-/* Css Styling of the Right Section of the CV - Section Self */
 .self {
   display: grid;
   justify-self: center;
-  align-self: center; }
-  .self .self-inner h1, .self .self-inner h2 {
+  align-self: center;
+  margin: auto; }
+  .self .self-inner h1 {
     text-transform: uppercase;
     font-size: 2.7em;
     font-weight: 500;
     letter-spacing: .5px;
     line-height: 1.5em;
-    display: none; }
-  .self .self-inner h1 {
+    display: none;
     color: #ffbf1c; }
   .self .self-inner h2 {
+    text-transform: uppercase;
+    font-size: 2.7em;
+    font-weight: 500;
+    letter-spacing: .5px;
+    line-height: 1.5em;
+    display: none;
     margin-left: 5%; }
   .self .self-inner .name-2 {
     font-size: 1.2em  !important;
@@ -195,7 +195,20 @@ footer {
   .social ul li {
     list-style: none;
     padding: 0;
-    margin-left: 5.5%; }
+    margin-left: 5.5%;
+    /*Changing background color of the Social buttons on hover */ }
+    .social ul li:nth-child(1) a:hover {
+      background: #1ab7ea; }
+    .social ul li:nth-child(2) a:hover {
+      background: #55acee; }
+    .social ul li:nth-child(3) a:hover {
+      background: #0077B5; }
+    .social ul li:nth-child(4) a:hover {
+      background: #02b875; }
+    .social ul li:nth-child(5) a:hover {
+      background: #3aaf85; }
+    .social ul li:nth-child(6) a:hover {
+      background: #ff3300; }
   .social ul a {
     color: rgba(38, 38, 38, 0.85);
     background-color: rgba(255, 191, 28, 0.8);
@@ -214,22 +227,22 @@ footer {
       content: '';
       position: absolute;
       background: #b1b1b1;
+      transition: .5s;
       top: .25em;
       left: -.4em;
       width: .4em;
       height: 100%;
-      transform: rotate(0deg) skewY(-45deg);
-      transition: .5s; }
+      transform: rotate(0deg) skewY(-45deg); }
     .social ul a::after {
       content: '';
       position: absolute;
       background: #b1b1b1;
+      transition: .5s;
       bottom: -.3em;
       left: -.1em;
       width: 100%;
       height: .4em;
-      transform: rotate(0deg) skewX(-45deg);
-      transition: .5s; }
+      transform: rotate(0deg) skewX(-45deg); }
   .social ul i {
     margin-top: .1em; }
     .social ul i:hover {
