--- a/css/style.css
+++ b/css/style.css
@@ -56,36 +56,33 @@ header .avatar {
   transform: scale(1.1) rotateX(0deg) translate(5%, 0);
   transition: .5s ease-out; }
 
-.info {
-  height: 90%; }
-  .info ul {
+.info ul {
+  height: 250px;
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+  overflow: hidden; }
+  .info ul li {
+    font-weight: bold;
+    background-color: orange;
+    background-repeat: no-repeat;
+    padding-left: 20%;
+    background-position: .7em .8em;
+    display: block;
     margin: 0;
-    height: 100%;
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    overflow: hidden; }
-    .info ul li {
-      font-weight: bold;
-      background-color: orange;
-      background-repeat: no-repeat;
-      padding: 2% 0 0 20%;
-      background-position: .7em .8em;
-      display: block;
-      margin-top: 2%;
-      height: 90%;
-      width: 80%; }
-      .info ul li:hover {
-        background-color: rgba(255, 255, 255, 0.05); }
-      .info ul li .ad {
-        background-image: url(../assets/images/icons/icn-ad.gif); }
-      .info ul li .mail {
-        background-image: url(../assets/images/icons/icn-mail.gif); }
-      .info ul li .tel {
-        background-image: url(../assets/images/icons/icn-tel.gif); }
-      .info ul li .web {
-        background-image: url(../assets/images/icons/icn-web.gif); }
-      .info ul li .skype {
-        padding-bottom: 5%; }
+    height: 90%;
+    width: 80%; }
+    .info ul li:hover {
+      background-color: rgba(255, 255, 255, 0.05); }
+    .info ul li .ad {
+      background-image: url(../assets/images/icons/icn-ad.gif); }
+    .info ul li .mail {
+      background-image: url(../assets/images/icons/icn-mail.gif); }
+    .info ul li .tel {
+      background-image: url(../assets/images/icons/icn-tel.gif); }
+    .info ul li .web {
+      background-image: url(../assets/images/icons/icn-web.gif); }
+    .info ul li .skype {
+      padding-bottom: 5%; }
 
 .content-info {
   margin: 7.5% 7.5%;
@@ -112,7 +109,7 @@ footer {
   grid-gap: 5%; }
   .hobbies-footer {
     background: rgba(0, 0, 0, 0.5);
-    transition: .5s ease-in-out; }
+    transition: .5s ease-in; }
   .hobbies-new {
     background: #ffee10;
     transform: scale(1.3) rotateY(540deg);
@@ -248,25 +245,6 @@ footer {
     .social ul i:hover {
       color: #FFF; }
 
-/*Changing background color of the Social buttons on hover */
-.social ul li:nth-child(1) a:hover {
-  background: #1ab7ea; }
-
-.social ul li:nth-child(2) a:hover {
-  background: #55acee; }
-
-.social ul li:nth-child(3) a:hover {
-  background: #0077B5; }
-
-.social ul li:nth-child(4) a:hover {
-  background: #02b875; }
-
-.social ul li:nth-child(5) a:hover {
-  background: #3aaf85; }
-
-.social ul li:nth-child(6) a:hover {
-  background: #ff3300; }
-
 .heading i {
   color: #ffbf1c;
   margin-right: 5%; }
@@ -294,7 +272,6 @@ footer {
 
 .content {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-gap: 3px; }
+  grid-template-columns: 1fr 2fr; }
 
 /*# sourceMappingURL=style.css.map */
