--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,7 @@
+// =========================================
+//  Varibles
+// =========================================
+
 $white: #FFF;
 $black: #000;
 
@@ -7,6 +11,10 @@ $banner-left-text: #ffdc2a;
 $soc-btn-sides: #b1b1b1;
 
 $font-stack-primary: "Roboto", sans-serif;
+
+// =========================================
+//  Mixins
+// =========================================
 
 @mixin heading-name {
     text-transform: uppercase;
@@ -56,6 +64,10 @@ $font-stack-primary: "Roboto", sans-serif;
   margin:auto;
 }
 
+// =========================================
+//  Content
+// =========================================
+
 body {
     width: 55%;
     margin: auto;
@@ -66,8 +78,7 @@ body {
     grid-template-columns: 230px 4% auto 4%;
     height: 100%;
 
-//Css Styling of the left Section of the CV
-
+    //Css Styling of the left Section of the CV
     &-left {
          grid-column: 1/2;
          display: grid;
@@ -75,9 +86,7 @@ body {
          background: $left-section-background;
            }
 
-
-// Css Styling of the Right Section of the CV
-
+    // Css Styling of the Right Section of the CV
     &-right {
         grid-column: 3/4;
         display: grid;
@@ -87,7 +96,6 @@ body {
      }
 
 // CSS Styling of the background Profile Photo Section of the CV
-
 
 header .profile{
     width: 100%;
@@ -122,8 +130,8 @@ header .profile{
         width: 80%;
         margin:8% auto;
         }
+  }
 
-    }
 //Toggling the opacity of the avatar image on click with Jquery
 
 .avtoggle{
@@ -143,36 +151,33 @@ header .profile{
 }
 
 .reverse{
-    background-color: orange !important;
-     transform: scale(1.1) rotateX(0deg)translate(5%, 0);
-     transition: .5s ease-out;
-
+  background-color: orange !important;
+  transform: scale(1.1) rotateX(0deg)translate(5%, 0);
+  transition: .5s ease-out;
 }
 
 // Dividing up the space of "UL" into equal dimension grid rows for "LI" elements
 
 
-.info{
-    height: 90%;
+.info {
 
    ul {
-      margin: 0;
-      height: 100%;
+      height: 250px;
       display:grid;
-      grid-template-rows:repeat(4,1fr);
+      grid-template-rows:repeat(4,auto);
       overflow: hidden;
 
       li {
          font-weight: bold;
          background-color: orange;
          background-repeat: no-repeat;
-         padding: 2% 0 0 20%;
+         padding-left: 20%;
          background-position: .7em .8em;
          display:block;
-         margin-top: 2%;
+         margin: 0;
          height: 90%;
          width: 80%;
-
+         //Changing styles of li on hover
          &:hover {
               background-color: rgba(255,255,255,.05);
              }
@@ -206,7 +211,7 @@ header .profile{
       line-height: 1.4em !important;
      }
 
-// CSS Styling of the Hobbies Section of the CV
+// CSS Styling of the Hobbies Section of the CV - Footer
 
 footer {
     background: rgb(255,165,0);
@@ -231,7 +236,7 @@ footer {
 
    &-footer{
       background: rgba(0,0,0,.5);
-      transition: .5s ease-in-out;
+      transition: .5s ease-in;
      }
 
 
@@ -276,8 +281,7 @@ footer {
 
 }
 
-@keyframes animate
-{
+@keyframes animate{
   0%
   {
     background-position: -50000%;
@@ -350,8 +354,6 @@ footer {
 
 //Positioning and Aligning Social Buttons Vertically
 
-
-
 .social ul {
            list-style: none;
            position: relative;
@@ -364,7 +366,6 @@ footer {
               list-style: none;
               padding: 0;
               margin-left: 5.5%;
-
 
               /*Changing background color of the Social buttons on hover */
 
@@ -401,7 +402,6 @@ footer {
               transition: .5s;
               box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
 
-
               //Creating styles  of the Social buttons on HOVER
 
               &:hover {
@@ -411,7 +411,6 @@ footer {
                 }
 
              // Creating the side frames of the Social buttons
-
 
               @include social-buttons-before{
                   top: .25em;
@@ -440,27 +439,6 @@ footer {
                       }
             }
         }
-
-/*Changing background color of the Social buttons on hover */
-
-.social ul li:nth-child(1) a:hover{
-    background: #1ab7ea;
-}
-.social ul li:nth-child(2) a:hover{
-    background: #55acee;
-}
-.social ul li:nth-child(3) a:hover{
-    background: #0077B5;
-}
-.social ul li:nth-child(4) a:hover{
-    background: #02b875;
-}
-.social ul li:nth-child(5) a:hover{
-    background: #3aaf85;
-}
-.social ul li:nth-child(6) a:hover{
-    background: #ff3300;
-}
 
 //Css Styling of the Right Section of the CV - Section-Education, Experience and Reference
 
@@ -495,16 +473,13 @@ footer {
 .education {
     display: grid;
     grid-template-rows: 20% repeat(2,auto);
-
 }
 
 .experience {
     display: grid;
     grid-template-rows: 20% repeat(3,auto);
-
 }
 .content {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-gap: 3px;
 }
