--- a/scss/partials/_reset.scss
+++ b/scss/partials/_reset.scss
@@ -1,20 +1,24 @@
+// =========================================
+//  Default - reset - styles
+// =========================================
+
 :root { font: 13px / 1.4 "Roboto", sans-serif; } /* or html */
 
 
  body, body * {
-	
+
 	font: inherit;
 	vertical-align: baseline;
-	border:          unset;
-	margin:          unset;
-	box-sizing:      unset;
-	padding:         unset;
-	font-size:       unset;
-	color:           unset;
+	border: unset;
+	margin: unset;
+	box-sizing: unset;
+	padding: unset;
+	font-size: unset;
+	color: unset;
 	text-decoration: unset;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
