--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,46 +2,11 @@
 //  Partials - Import
 // =========================================
 
-@import 'partials/reset',
+@import 'partials/debugger',
+        'partials/reset',
         'partials/variables',
         'partials/mixins',
-        'partials/main-style';
-
-        // =========================================
-        //  Debugger
-        // =========================================
-
-        section {
-
-            border-style: solid;
-            border-width: 1px;
-            border-color: red;
-        }
-
-        div {
-
-            border-style: solid;
-            border-width: 1px;
-            border-color: blue;
-        }
-
-        img {
-
-            border-style: solid;
-            border-width: 1px;
-            border-color: black;
-        }
-
-        li {
-
-            border-style: solid;
-            border-width: 1px;
-            border-color: green;
-        }
-
-        a {
-
-            border-style: solid;
-            border-width: 1px;
-            border-color: pink;
-        }
+        'partials/main-style',
+        'partials/content/left-section/header',
+        'partials/content/left-section/contact-section',
+        'partials/content/left-section/footer';
