--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -5,9 +5,10 @@
 $white: #FFF;
 $black: #000;
 
-$left-section-background: #ffbf1c;
+$left-section-background: #ffbf1c; //yellow
+$info-section-background: orange;
 $hobbies-onclick-color: #ffee10;
 $banner-left-text: #ffdc2a;
 $soc-btn-sides: #b1b1b1;
 
-$font-stack-primary: "Roboto";
+$font-stack-primary: "'Roboto',sans-serif";
