--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,13 +7,13 @@
         'partials/variables',
         'partials/mixins',
         'partials/main-style',
-        'partials/content/wrapper',
-        'partials/content/left-section/header',
-        'partials/content/left-section/banner',
-        'partials/content/left-section/contact',
-        'partials/content/left-section/about-me',
-        'partials/content/left-section/footer',
-        'partials/content/right-section/intro',
-        'partials/content/right-section/social',
-        'partials/content/right-section/heading',
-        'partials/content/right-section/education';
+        'partials/layout/wrapper',
+        'partials/layout/left-section/header',
+        'partials/layout/left-section/banner',
+        'partials/layout/left-section/contact',
+        'partials/layout/left-section/about-me',
+        'partials/layout/left-section/footer',
+        'partials/layout/right-section/intro',
+        'partials/layout/right-section/social',
+        'partials/layout/right-section/heading-sec',
+        'partials/layout/right-section/education';
